src/test/deca/context/valid/sansObjet/while.deca
// Description :
//    Boucle while simple jusqu'à une condition donnée.
//
// Resultats :
// ok

{
    int i = 0;
    while (i <= 10){
        i = i+1;
    }
}