src/test/deca/context/invalid/sansObjet/convFloatInt.deca
// Description :
//    Conversion invalide : tentative d'assigner une valeur de type float à une variable de type int.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Type incompatible : attendu int, trouvé float

{
    int x = 1.0;
}